Update to Fabric Loader 0.13.1